--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -168,3 +168,44 @@
     color: rgb(0, 0, 0);
     font-weight: lighter;
 }
+.coloumn{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin-top: 40px;
+}
+
+.coloumn{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 350px;
+    height: 400px;
+    border-radius: 10px;
+    background-color: rgb(241, 241, 241);
+}
+.buy-text{
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #032D62;
+    font-weight: bold;
+}
+.text-02{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(0, 0, 0);
+    font-weight: lighter;
+    text-align: center;
+}
+.roww{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 40px;
+}
